[gd_scene load_steps=24 format=2]

[ext_resource path="res://ui/GameUI/GameUI.gd" type="Script" id=1]
[ext_resource path="res://ui/common/netherreich_theme.tres" type="Theme" id=2]
[ext_resource path="res://pickups/ArtefactPickup/artefact.png" type="Texture" id=3]
[ext_resource path="res://players/Player/sprites/healing_vessel.png" type="Texture" id=4]
[ext_resource path="res://players/Player/sprites/healing_liquid_block.png" type="Texture" id=5]
[ext_resource path="res://players/Player/sprites/reload_block-export.png" type="Texture" id=6]
[ext_resource path="res://ui/GameUI/flashUI.png" type="Texture" id=7]
[ext_resource path="res://ui/GameUI/flashUI1.png" type="Texture" id=8]
[ext_resource path="res://levels/tiles/Textures/tutorial_swordsman.png" type="Texture" id=9]
[ext_resource path="res://ui/OnScreenMapUi/OnScreenMapUi.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/GameUI/ability_slot_empty.png" type="Texture" id=11]
[ext_resource path="res://ui/GameUI/ability_slot_prompt_open.png" type="Texture" id=12]
[ext_resource path="res://ui/GameUI/ability_slot_cannon_prompt.png" type="Texture" id=13]
[ext_resource path="res://ui/GameUI/healthmeter_icon.png" type="Texture" id=14]
[ext_resource path="res://ui/Console/Console.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 12 )
region = Rect2( 120, 0, 60, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 60, 0, 60, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 60, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 60, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 12 )
region = Rect2( 60, 0, 60, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 12 )
region = Rect2( 120, 0, 60, 80 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "close",
"speed": 30.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "open",
"speed": 30.0
} ]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HealingTubeFlash" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 17.9431, 214.329 )
scale = Vector2( 0.56421, 0.604664 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_right = 148.0
margin_bottom = 48.0
theme = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Right click : Dodge
Space: Use item
Esc: [wave]Death[/wave] menu
'M' : Map"
text = "Right click : Dodge
Space: Use item
Esc: Death menu
'M' : Map"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtefactIcon" type="TextureRect" parent="."]
visible = false
margin_left = 280.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 40.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitySlot1" type="TextureRect" parent="."]
margin_left = 735.738
margin_top = 437.306
margin_right = 758.738
margin_bottom = 468.306
texture = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitySlot2" type="TextureRect" parent="."]
margin_left = 761.771
margin_top = 437.306
margin_right = 784.771
margin_bottom = 468.306
texture = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitySlot3" type="TextureRect" parent="."]
margin_left = 788.554
margin_top = 437.681
margin_right = 811.554
margin_bottom = 468.681
texture = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitySlot4" type="TextureRect" parent="."]
margin_left = 814.51
margin_top = 437.681
margin_right = 837.51
margin_bottom = 468.681
texture = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeldItemIcon" type="TextureRect" parent="."]
light_mask = 0
margin_left = 33.0741
margin_top = 198.423
margin_right = 73.0741
margin_bottom = 238.423
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsesCount" type="RichTextLabel" parent="."]
margin_left = 44.8569
margin_top = 207.707
margin_right = 74.8569
margin_bottom = 238.707
theme = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Liquid" type="TextureRect" parent="."]
anchor_left = 0.197
anchor_top = 0.208
anchor_right = 0.231
anchor_bottom = 0.209
margin_left = -149.844
margin_top = 306.16
margin_right = -136.812
margin_bottom = 368.68
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 32 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReloadProgress" type="TextureRect" parent="."]
visible = false
anchor_left = 0.197
anchor_top = 0.208
anchor_right = 0.231
anchor_bottom = 0.209
margin_left = -17.5926
margin_top = 172.281
margin_right = -26.4727
margin_bottom = 182.041
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 10 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cap" type="TextureRect" parent="."]
visible = false
anchor_left = 0.197
anchor_top = 0.208
anchor_right = 0.231
anchor_bottom = 0.209
margin_left = -19.0892
margin_top = 169.249
margin_right = -25.5732
margin_bottom = 172.009
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 10 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealingTube" type="TextureRect" parent="."]
anchor_left = 0.013
anchor_right = 0.282
anchor_bottom = 0.219
margin_left = -49.076
margin_top = 379.0
margin_right = -118.264
margin_bottom = 372.88
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealingTubeFlashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="SpeakingCharacter" type="TextureRect" parent="."]
visible = false
anchor_left = 0.013
anchor_right = 0.282
anchor_bottom = 0.219
margin_left = 185.61
margin_top = 27.3701
margin_right = 259.53
margin_bottom = 188.81
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakingCharacterText" type="RichTextLabel" parent="."]
visible = false
margin_left = 10.0
margin_top = 116.0
margin_right = 221.0
margin_bottom = 227.0
rect_scale = Vector2( 0.974207, 0.889253 )
theme = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 0, 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnScreenMapUi" parent="." instance=ExtResource( 10 )]
visible = false
margin_left = 18.0
margin_top = 12.0
margin_right = 320.0
margin_bottom = 239.0

[node name="AbilityPickupPromptAnim" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 212.844, 102.41 )
scale = Vector2( 1.69217, 1.23597 )
frames = SubResource( 5 )
animation = "close"

[node name="AbilityPickupString" type="RichTextLabel" parent="."]
visible = false
margin_left = 150.0
margin_top = 170.0
margin_right = 284.0
margin_bottom = 190.0
theme = ExtResource( 2 )
custom_colors/default_color = Color( 1, 1, 0, 1 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityPickupPrompt" type="TextureRect" parent="."]
visible = false
margin_left = 165.337
margin_top = 33.9439
margin_right = 264.337
margin_bottom = 167.944
texture = ExtResource( 13 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityPromptDisplayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthBar" type="TextureRect" parent="."]
anchor_left = 0.197
anchor_top = 0.266
anchor_right = 0.231
anchor_bottom = 0.361
margin_left = -110.694
margin_top = -92.6403
margin_right = -98.6622
margin_bottom = -118.24
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 32 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthbar_icon" type="TextureRect" parent="."]
margin_left = 12.0
margin_top = 11.0
margin_right = 74.0
margin_bottom = 71.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" parent="." instance=ExtResource( 15 )]
visible = false
